--- a/rooty-next/styles/globals.css
+++ b/rooty-next/styles/globals.css
@@ -24,3 +24,160 @@ a {
     background: black;
   }
 }
+
+.css-ybol96-MuiButtonBase-root-MuiTab-root{
+  min-width:0%
+}
+
+/* ContestTipCard:after { */
+  /* background: linear-gradient(to bottom, transparent 0%, #4F4DB0 100%); */
+  
+/* } */
+
+/* #root {
+  max-width: 1280px;
+  margin: 0 auto;
+  /* padding: 2rem; */
+  /* text-align: center; */
+  /* align-items: center; */
+/* } */
+
+
+/* h1.header { */
+  /* padding-bottom: 2em;
+  margin-left: 35%; */
+/* position: absolute;
+width: 171px;
+height: 28px;
+left: 33px;
+top: 64px; */
+
+/* font-family: 'Plus Jakarta Sans';
+font-style: normal;
+font-weight: 700;
+font-size: 30px;
+line-height: 38px;
+}  */
+
+/* * {
+  max-width: 100vw;
+  margin: auto;
+}
+
+Navigation > div > box-icon.activeIcon{
+  opacity: 1;
+  pointer-events: none;
+}
+
+.categories li {
+  border: solid;
+  border-radius: 0.5rem;
+  padding: 1rem;
+  height: 40px;
+  width: 200px;
+  padding-top: 12%;
+}
+
+
+
+/* .logo {
+  height: 6em;
+  padding: 1.5em;
+  will-change: filter;
+}
+.logo:hover {
+  filter: drop-shadow(0 0 2em #646cffaa);
+}
+.logo.react:hover {
+  filter: drop-shadow(0 0 2em #61dafbaa);
+} */
+/* 
+@keyframes logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  a:nth-of-type(2) .logo {
+    animation: logo-spin infinite 20s linear;
+  }
+} */
+
+/* .card {
+  padding: 2em;
+}
+
+.read-the-docs {
+  color: #888;
+} */
+
+/* :root {
+  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+
+  color-scheme: light dark;
+  color: rgba(255, 255, 255, 0.87);
+  background-color: #242424;
+
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
+} */
+
+/* a {
+  font-weight: 500;
+  color: #646cff;
+  text-decoration: inherit;
+} */
+/* a:hover {
+  color: #535bf2;
+} */
+
+/* h1 {
+  font-size: 1.3em;
+  margin: 0
+} */
+
+/* p{
+  margin:0
+} */
+
+/* button {
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #1a1a1a;
+  cursor: pointer;
+  transition: border-color 0.25s;
+}
+button:hover {
+  border-color: #646cff;
+}
+button:focus,
+button:focus-visible {
+  outline: 4px auto -webkit-focus-ring-color;
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    color: #213547;
+    background-color: #ffffff;
+  }
+  a:hover {
+    color: #747bff;
+  }
+  button {
+    background-color: #f9f9f9;
+  }
+} */
