Created Client-Side Components of Current postspage

--- a/rooty-next/styles/globals.css
+++ b/rooty-next/styles/globals.css
@@ -15,7 +15,7 @@ a {
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
@@ -23,7 +23,7 @@ a {
     color: white;
     background: black;
   }
-}
+} */
 
 .css-ybol96-MuiButtonBase-root-MuiTab-root{
   min-width:0%
