--- a/rooty-next/styles/globals.css
+++ b/rooty-next/styles/globals.css
@@ -2,8 +2,10 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Plus Jakarta Sans', sans-serif;
+}
+div, button, optgroup, select, input, textarea {
+  font-family: 'Plus Jakarta Sans', sans-serif;
 }
 
 a {
